Updated uses of raw types with either <?> or a specific type. Replaced use of deprecated File.toURL --> File.toURI.toURL. Added in serial version id's to remove warnings about serialized objects with default serial ID's.